connection request info

--- a/ethereum-rar-demo/src/main/webapp/gas-price.xhtml
+++ b/ethereum-rar-demo/src/main/webapp/gas-price.xhtml
@@ -16,6 +16,7 @@
         </h:head>
 
         <h:body>
+            <h:messages/>
             <h:panelGrid columns="2">
                 <h:outputText value="gas price:"/>
                 <h:outputText value="#{ethereumController.gasPrice}"/>
