node location config property

--- a/ethereum-rar-demo/src/main/webapp/index.xhtml
+++ b/ethereum-rar-demo/src/main/webapp/index.xhtml
@@ -19,7 +19,7 @@
             <h:form>
                 <h:panelGrid columns="2">
                     <h:outputText value="Node location:"/>
-                    <h:inputText value="#{ethereumController.nodeLocation}"/>
+                    <h:inputText value="#{ethereumController.nodeLocation}" size="60"/>
                 </h:panelGrid>
                 <h:commandButton value="Get Gas Price" action="/gas-price"/>
             </h:form>
