--- a/ethereum-rar-demo/src/main/webapp/index.xhtml
+++ b/ethereum-rar-demo/src/main/webapp/index.xhtml
@@ -22,7 +22,10 @@
                     <h:inputText value="#{ethereumController.nodeLocation}" size="60"/>
 
                     <h:outputText value="Maximum transaction duration:"/>
-                    <h:inputText value="#{ethereumController.maxDuration}" size="60"/>
+                    <h:inputText value="#{ethereumController.maxDuration}" size="10"/>
+
+                    <h:outputText value="Oracle:"/>
+                    <h:inputText value="#{ethereumController.oracle}" size="20"/>
 
                     <h:outputText value="Rollback transaction:"/>
                     <h:selectBooleanCheckbox value="#{ethereumController.rollback}"/>
