--- a/ethereum-rar-demo/src/main/webapp/index.xhtml
+++ b/ethereum-rar-demo/src/main/webapp/index.xhtml
@@ -30,7 +30,11 @@
                     <h:outputText value="Rollback transaction:"/>
                     <h:selectBooleanCheckbox value="#{ethereumController.rollback}"/>
                 </h:panelGrid>
-                <h:commandButton value="Get Gas Price" action="/gas-price"/>
+                <h:inputTextarea value="#{ethereumController.rawTransaction}" cols="60" rows="5"/>
+                <h:panelGrid columns="2">
+                    <h:commandButton value="Get Gas Price" action="/gas-price"/>
+                    <h:commandButton value="Send Raw Transaction" action="#{ethereumController.sendRawTransaction}"/>
+                </h:panelGrid>
             </h:form>
         </h:body>
     </f:view>
