--- a/ethereum-rar-demo/src/main/webapp/index.xhtml
+++ b/ethereum-rar-demo/src/main/webapp/index.xhtml
@@ -41,6 +41,7 @@
                     <h:commandButton value="Get Gas Price" action="/gas-price"/>
                     <h:commandButton value="Send Raw Transaction" action="#{ethereumController.sendRawTransaction}"/>
                     <h:commandButton value="Get Transaction Confirmation" action="/transaction"/>
+                    <h:commandButton value="Accounts" action="/accounts"/>
                 </h:panelGrid>
             </h:form>
         </h:body>
