--- a/ethereum-rar-demo/src/main/webapp/index.xhtml
+++ b/ethereum-rar-demo/src/main/webapp/index.xhtml
@@ -12,10 +12,11 @@
             <meta http-equiv="Cache-Control"
                   content="no-cache, no-store, max-age=0, must-revalidate" />
             <meta http-equiv="Pragma" content="no-cache" />
-            <title>Ethereum Resource Adapter Demo Web Application</title>
+            <title>Ethereum JCA Resource Adapter Demo Web Application</title>
         </h:head>
 
         <h:body>
+            <h1>Ethereum JCA Resource Adapter Demo Web Application</h1>
             <h:form>
                 <h:panelGrid columns="2">
                     <h:outputText value="Node location:"/>
