--- a/ethereum-rar-demo/src/main/webapp/index.xhtml
+++ b/ethereum-rar-demo/src/main/webapp/index.xhtml
@@ -20,24 +20,24 @@
             <h:form>
                 <h:panelGrid columns="2">
                     <h:outputText value="Node location:"/>
-                    <h:inputText value="#{ethereumController.nodeLocation}" size="60"/>
+                    <h:inputText value="#{ethereumDemoController.nodeLocation}" size="60"/>
 
                     <h:outputText value="Maximum transaction duration:"/>
-                    <h:inputText value="#{ethereumController.maxDuration}" size="10"/>
+                    <h:inputText value="#{ethereumDemoController.maxDuration}" size="10"/>
 
                     <h:outputText value="Rollback transaction:"/>
-                    <h:selectBooleanCheckbox value="#{ethereumController.rollback}"/>
+                    <h:selectBooleanCheckbox value="#{ethereumDemoController.rollback}"/>
 
                     <h:outputText value="Local transaction:"/>
-                    <h:selectBooleanCheckbox value="#{ethereumController.localTransaction}"/>
+                    <h:selectBooleanCheckbox value="#{ethereumDemoController.localTransaction}"/>
 
                     <h:outputText value="Transaction hash:"/>
-                    <h:inputText value="#{ethereumController.transactionHash}" size="70"/>
+                    <h:inputText value="#{ethereumDemoController.transactionHash}" size="70"/>
                 </h:panelGrid>
-                <h:inputTextarea value="#{ethereumController.rawTransaction}" cols="60" rows="5"/>
+                <h:inputTextarea value="#{ethereumDemoController.rawTransaction}" cols="60" rows="5"/>
                 <h:panelGrid columns="3">
                     <h:commandButton value="Get Gas Price" action="/gas-price"/>
-                    <h:commandButton value="Send Raw Transaction" action="#{ethereumController.sendRawTransaction}"/>
+                    <h:commandButton value="Send Raw Transaction" action="#{ethereumDemoController.sendRawTransaction}"/>
                     <h:commandButton value="Get Transaction Confirmation" action="/transaction"/>
                     <h:commandButton value="Accounts" action="/accounts"/>
                 </h:panelGrid>
