--- a/ethereum-rar-demo/src/main/webapp/index.xhtml
+++ b/ethereum-rar-demo/src/main/webapp/index.xhtml
@@ -39,7 +39,7 @@
                     <h:commandButton value="Get Gas Price" action="/gas-price"/>
                     <h:commandButton value="Send Raw Transaction" action="#{ethereumDemoController.sendRawTransaction}"/>
                     <h:commandButton value="Get Transaction Confirmation" action="/transaction"/>
-                    <h:commandButton value="Accounts" action="/accounts"/>
+                    <h:commandButton value="Accounts" action="/accounts/index"/>
                 </h:panelGrid>
             </h:form>
         </h:body>
