--- a/ethereum-rar-demo/src/main/webapp/raw/result.xhtml
+++ b/ethereum-rar-demo/src/main/webapp/raw/result.xhtml
@@ -12,17 +12,14 @@
             <meta http-equiv="Cache-Control"
                   content="no-cache, no-store, max-age=0, must-revalidate" />
             <meta http-equiv="Pragma" content="no-cache" />
-            <title>Ethereum JCA Resource Adapter Demo Web Application</title>
+            <title>Ethereum Resource Adapter Demo Web Application</title>
         </h:head>
 
         <h:body>
-            <h1>Ethereum JCA Resource Adapter Demo Web Application</h1>
+            <h1>Send Raw Transaction Result</h1>
             <h:form>
                 <h:panelGrid columns="1">
-                    <h:commandButton value="Get Gas Price" action="/gas-price"/>
-                    <h:commandButton value="Send Raw Transaction" action="/raw/index"/>
-                    <h:commandButton value="Get Transaction Confirmation" action="/confirm/index"/>
-                    <h:commandButton value="Accounts" action="/accounts/index"/>
+                    <h:commandButton value="Back" action="/index"/>
                 </h:panelGrid>
             </h:form>
         </h:body>
