--- a/ethereum-rar-demo/src/main/webapp/accounts/index.xhtml
+++ b/ethereum-rar-demo/src/main/webapp/accounts/index.xhtml
@@ -28,6 +28,7 @@
                     <h:column>
                         <h:commandButton value="Balance" action="#{ethereumDemoAccountController.getBalance(account)}"/>
                         <h:commandButton value="Unlock" action="#{ethereumDemoAccountController.unlock(account)}"/>
+                        <h:commandButton value="Transaction" action="#{ethereumDemoAccountController.initTransaction(account)}"/>
                     </h:column>
                 </h:dataTable>
                 <h:panelGrid columns="2">
