--- a/ethereum-rar-demo/src/main/webapp/index.xhtml
+++ b/ethereum-rar-demo/src/main/webapp/index.xhtml
@@ -23,7 +23,7 @@
                     <h:commandButton value="Send Raw Transaction" action="/raw/index"/>
                     <h:commandButton value="Get Transaction Confirmation" action="/confirm/index"/>
                     <h:commandButton value="Accounts" action="/accounts/index"/>
-                    <h:commandButton value="Send Transaction" action="/tx/index"/>
+                    <h:commandButton value="Keys" action="/keys/index"/>
                 </h:panelGrid>
             </h:form>
         </h:body>
