--- a/ethereum-rar-demo/src/main/webapp/keys/index.xhtml
+++ b/ethereum-rar-demo/src/main/webapp/keys/index.xhtml
@@ -16,26 +16,21 @@
         </h:head>
 
         <h:body>
-            <h1>Send Transaction</h1>
+            <h1>In-memory keys</h1>
             <h:form>
+                <h:dataTable value="#{ethereumDemoKeysController.keys}" var="address">
+                    <h:column>
+                        <f:facet name="header">
+                            Address
+                        </f:facet>
+                        <h:outputText value="#{address}"/>
+                    </h:column>
+                    <h:column>
+                        <h:commandButton value="Balance" action="#{ethereumDemoKeysController.getBalance(address)}"/>
+                    </h:column>
+                </h:dataTable>
                 <h:panelGrid columns="2">
-                    <h:outputText value="From:"/>
-                    <h:inputText value="#{ethereumDemoTransactionController.from}" size="60"/>
-
-                    <h:outputText value="To:"/>
-                    <h:inputText value="#{ethereumDemoTransactionController.to}" size="60"/>
-
-                    <h:outputText value="Value:"/>
-                    <h:inputText value="#{ethereumDemoTransactionController.value}"/>
-
-                    <h:outputText value="Gas Price:"/>
-                    <h:inputText value="#{ethereumDemoTransactionController.gasPrice}"/>
-
-                    <h:outputText value="Nonce:"/>
-                    <h:inputText value="#{ethereumDemoTransactionController.nonce}"/>
-                </h:panelGrid>
-                <h:panelGrid columns="2">
-                    <h:commandButton value="Send" action="#{ethereumDemoTransactionController.sendTransaction}"/>
+                    <h:commandButton value="New" action="#{ethereumDemoKeysController.newKey}"/>
                     <h:commandButton value="Back" action="/index"/>
                 </h:panelGrid>
             </h:form>
