--- a/ethereum-rar-demo/src/main/webapp/accounts/unlocked.xhtml
+++ b/ethereum-rar-demo/src/main/webapp/accounts/unlocked.xhtml
@@ -17,6 +17,7 @@
 
         <h:body>
             <h1>Unlocked Account</h1>
+            <h:messages errorStyle="color:red;"/>
             <h:panelGrid columns="2">
                 <h:outputText value="Account"/>
                 <h:outputText value="#{ethereumDemoAccountController.selectedAccount}"/>
