keys transaction signing

--- a/ethereum-rar-demo/src/main/webapp/accounts/index.xhtml
+++ b/ethereum-rar-demo/src/main/webapp/accounts/index.xhtml
@@ -18,7 +18,7 @@
         <h:body>
             <h1>Client Node Accounts</h1>
             <h:form>
-                <h:messages errorStyle="color:red;"/>
+                <h:messages errorStyle="color:red;" infoStyle="color:blue;"/>
                 <h:dataTable value="#{ethereumDemoAccountController.accounts}" var="account">
                     <h:column>
                         <f:facet name="header">
