--- a/ethereum-rar-demo/src/main/webapp/keys/index.xhtml
+++ b/ethereum-rar-demo/src/main/webapp/keys/index.xhtml
@@ -18,6 +18,7 @@
         <h:body>
             <h1>In-memory keys</h1>
             <h:form>
+                <h:messages errorStyle="color:red;"/>
                 <h:dataTable value="#{ethereumDemoKeysController.keys}" var="address">
                     <h:column>
                         <f:facet name="header">
@@ -27,6 +28,7 @@
                     </h:column>
                     <h:column>
                         <h:commandButton value="Balance" action="#{ethereumDemoKeysController.getBalance(address)}"/>
+                        <h:commandButton value="Transaction" action="#{ethereumDemoKeysController.initTransaction(address)}"/>
                     </h:column>
                 </h:dataTable>
                 <h:panelGrid columns="2">
