--- a/ethereum-rar-demo/src/main/webapp/keys/transaction.xhtml
+++ b/ethereum-rar-demo/src/main/webapp/keys/transaction.xhtml
@@ -16,27 +16,30 @@
         </h:head>
 
         <h:body>
-            <h1>Send Account Transaction</h1>
+            <h1>Sign Transaction</h1>
             <h:form>
                 <h:panelGrid columns="2">
                     <h:outputText value="From:"/>
-                    <h:inputText value="#{ethereumDemoAccountController.selectedAccount}" size="60"/>
+                    <h:inputText value="#{ethereumDemoKeysController.selectedAddress}" size="60"/>
 
                     <h:outputText value="To:"/>
-                    <h:inputText value="#{ethereumDemoAccountController.to}" size="60"/>
+                    <h:inputText value="#{ethereumDemoKeysController.to}" size="60"/>
 
                     <h:outputText value="Value:"/>
-                    <h:inputText value="#{ethereumDemoAccountController.value}"/>
+                    <h:inputText value="#{ethereumDemoKeysController.value}"/>
 
                     <h:outputText value="Gas Price:"/>
-                    <h:inputText value="#{ethereumDemoAccountController.gasPrice}"/>
+                    <h:inputText value="#{ethereumDemoKeysController.gasPrice}"/>
 
                     <h:outputText value="Nonce:"/>
-                    <h:inputText value="#{ethereumDemoAccountController.nonce}"/>
+                    <h:inputText value="#{ethereumDemoKeysController.nonce}"/>
+
+                    <h:outputText value="Chain Id:"/>
+                    <h:inputText value="#{ethereumDemoKeysController.chainId}"/>
                 </h:panelGrid>
                 <h:panelGrid columns="2">
-                    <h:commandButton value="Send" action="#{ethereumDemoAccountController.sendTransaction}"/>
-                    <h:commandButton value="Back" action="/accounts/index"/>
+                    <h:commandButton value="Sign" action="#{ethereumDemoKeysController.signTransaction}"/>
+                    <h:commandButton value="Back" action="/keys/index"/>
                 </h:panelGrid>
             </h:form>
         </h:body>
