--- a/ethereum-rar-demo/src/main/webapp/raw/result.xhtml
+++ b/ethereum-rar-demo/src/main/webapp/raw/result.xhtml
@@ -18,6 +18,7 @@
         <h:body>
             <h1>Send Raw Transaction Result</h1>
             <h:form>
+                <h:messages errorStyle="color:red;" infoStyle="color:blue;"/>
                 <h:panelGrid columns="1">
                     <h:commandButton value="Back" action="/index"/>
                 </h:panelGrid>
