--- a/ethereum-rar-demo/src/main/webapp/keys/index.xhtml
+++ b/ethereum-rar-demo/src/main/webapp/keys/index.xhtml
@@ -30,6 +30,7 @@
                         <h:commandButton value="Balance" action="#{ethereumDemoKeysController.getBalance(address)}"/>
                         <h:commandButton value="Transaction" action="#{ethereumDemoKeysController.initTransaction(address)}"/>
                         <h:commandButton value="Deploy Demo Contract" action="#{ethereumDemoKeysController.deployDemoContract(address)}"/>
+                        <h:commandButton value="Invoke Demo Contract" action="#{ethereumDemoKeysController.initInvokeDemoContract(address)}"/>
                     </h:column>
                 </h:dataTable>
                 <h:panelGrid columns="2">
