read demo contract

--- a/ethereum-rar-demo/src/main/webapp/keys/index.xhtml
+++ b/ethereum-rar-demo/src/main/webapp/keys/index.xhtml
@@ -31,6 +31,7 @@
                         <h:commandButton value="Transaction" action="#{ethereumDemoKeysController.initTransaction(address)}"/>
                         <h:commandButton value="Deploy Demo Contract" action="#{ethereumDemoKeysController.deployDemoContract(address)}"/>
                         <h:commandButton value="Invoke Demo Contract" action="#{ethereumDemoKeysController.initInvokeDemoContract(address)}"/>
+                        <h:commandButton value="Read Demo Contract" action="#{ethereumDemoKeysController.initReadDemoContract(address)}"/>
                     </h:column>
                 </h:dataTable>
                 <h:panelGrid columns="2">
